--- a/css/default.css
+++ b/css/default.css
@@ -13,9 +13,9 @@ body {
 }
 
 
+
 /*** MENU ***/
 #menu {
-	/*background: #899;*/
 	background: #3a4967;
 	background: #444;
 	color: #fff;
@@ -28,16 +28,12 @@ body {
 	color: #fff;
 	font-weight: bold;
 	margin: 10px 0 0;
-	/*font-size: 1em;*/
 }
 
 #menu ul {
 	list-style-type: none;
 	width: 100%;
-	/*display: table;*/
-	/*margin: 0;*/
 	padding-left: 14px;
-	/*line-height: 1.5em;*/
 }
 
 #menu > ul {
@@ -45,7 +41,6 @@ body {
 }
 
 #menu ul li {
-	/*display: table-row;*/
 }
 
 #menu ul li a {
@@ -55,10 +50,24 @@ body {
 	padding: 5px;
 }
 
+#menu ul li a.active {
+	color: #fff;
+}
+
 #menu ul li a:hover {
 	background: rgba(255, 255, 255, 0.1);
 	color: #fff;
 }
+
+
+
+/* ICONS */
+i.fa {
+	color: #09d;
+	/*opacity: 0.7;*/
+	font-size: 0.9em;
+}
+
 
 
 /*** CONTENT PATH ***/
@@ -71,16 +80,21 @@ body {
 }
 
 
+
 /*** CONTENT ***/
 #content {
 	background: #fff;
 }
 
 
-/* ICONS */
-i.fa {
-	color: #09d;
-	/*opacity: 0.7;*/
-	font-size: 0.9em;
+
+code {
+	background: rgba(255, 255, 200, 0.1);
+	background: rgba(100, 100, 0, 0.1);
+	color: #080;
+	font-family: "Consolas", monospace;
 }
 
+a {
+	color: #09f;
+}
