--- a/css/wiki.css
+++ b/css/wiki.css
@@ -13,11 +13,10 @@ body {
 
 
 /*** MENU ***/
-#menu {
+#menu_wrapper {
 	background: #f6f6f6;
 	border-right: 1px solid #a7d7f9;
-	border-bottom: 1px solid #a7d7f9;
-	width: 20%;
+	/*border-bottom: 1px solid #a7d7f9;*/
 }
 
 #search {
