--- a/css/base.css
+++ b/css/base.css
@@ -39,12 +39,6 @@ body {
 	min-height: 100%;
 	padding: 20px;
 	width: 350px;
-	/*float: left;*/
-	height: 100%;
-	/*padding-top: 240px;*/
-
-	/*overflow-y: auto;*/
-
 	height: 100%;
 	width: 368px;
 	overflow-y: scroll;
@@ -59,12 +53,13 @@ body {
 }
 
 #menu_top {
-	/*position: fixed;*/
-	top: 0;
 	padding: 20px 0;
 	width: 310px;
 	background: inherit;
-	z-index: 9;
+}
+
+#menu i.fa {
+	margin-right: 10px;
 }
 
 
@@ -81,21 +76,16 @@ body {
 }
 
 
+
 /*** CONTENT ***/
 #content {
-	/*position: relative;*/
 	float: left;
 	width: 850px;
-	/*min-height: 100%;*/
 	height: 100%;
-	/*padding-top: 60px;*/
 }
 
 #content_path {
 	width: 850px;
-	/*position: fixed;*/
-	top: 0;
-	z-index: 9;
 }
 
 #content_path .filesize {
@@ -117,17 +107,14 @@ body {
 }
 
 
-#menu i.fa {
-	margin-right: 10px;
-}
 
+/*** LOADING ***/
 #loading {
-	/*position: fixed;*/
-	/*left: 40%;*/
-	/*top: 40%;*/
-	text-align: center;
 }
 
+
+
+/*** ERROR ***/
 .error {
 	text-align: center;
 	color: #f66;
@@ -193,7 +180,6 @@ video {
 }
 
 #content code.file {
-	padding: 0;
 }
 
 #content code.nobg {
