--- a/themes/_theme_template.css
+++ b/themes/_theme_template.css
@@ -56,10 +56,10 @@ body {
 
 
 /*** CONTENT PATH ***/
-#content_path {
+#content_top {
 }
 
-#content_path .filesize {
+#content_top .filesize {
 }
 
 
