#18 Cleaned up in themes and color schemes

--- a/public/themes/color-schemes/simplistic.css
+++ b/public/themes/color-schemes/simplistic.css
@@ -1,4 +1,4 @@
-/* Color Scheme: simplistic-white */
+/* Color Scheme: Simplistic (white) */
 
 body {
 }
@@ -80,4 +80,11 @@ code {
 
 a {
 	color: #07f;
+}
+
+
+
+/*** SEARCH ***/
+#search {
+	background: #eee;
 }
