Higher accessibility through aria attributes to menu buttons

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -54,6 +54,7 @@ body {
 	padding: 10px 16px;
 	background: rgba(255, 255, 255, 0.6);
 	font-weight: bold;
+	border: none;
 }
 
 #menu ul > ul {
@@ -241,5 +242,7 @@ video {
 
 	#content_top #mobile_nav_icon {
 		display: inline;
+		font-size: 1.2em;
+		color: #0645ad;
 	}
 }
