--- a/public/css/base.css
+++ b/public/css/base.css
@@ -20,8 +20,7 @@ body {
 
 /*** MAIN ***/
 #main {
-	width: 900px;
-	width: 1200px;
+	width: 100%;
 	height: 100%;
 }
 
@@ -39,7 +38,6 @@ body {
 #menu {
 	min-height: 100%;
 	padding: 20px 20px 40px;
-	width: 350px;
 	height: 100%;
 	width: 368px;
 	overflow-y: scroll;
@@ -92,12 +90,14 @@ body {
 /*** CONTENT ***/
 #content_wrapper {
 	float: left;
-	width: 850px;
+	width: 100%;
 	height: 100%;
+	padding-left:350px;
+	margin-left:-350px;
 }
 
 #content_top {
-	width: 850px;
+	width: 100%;
 	position: fixed;
 }
 
@@ -230,6 +230,11 @@ video {
 
 	#menu {
 		/*max-width: 100%;*/
+	}
+
+	#content_wrapper {
+		padding-left:0;
+		margin-left:0;
 	}
 
 
