--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -9,6 +9,8 @@
 		<link rel="stylesheet" type="text/css" href="css/base.css">
 		<link rel="stylesheet" type="text/css" href="themes/{{ config.theme | lower }}.css">
 		<link rel="stylesheet" type="text/css" href="color-schemes/{{ config.color_scheme | lower }}.css">
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
 
 		<script src="//cdn.jsdelivr.net/npm/alertifyjs@1.11.0/build/alertify.min.js"></script>
 		<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.11.0/build/css/alertify.min.css"/>
