--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-	<div id="main" class="container" style="font-family: {{ config.font_family ? ("'" ~ config.font_family ~ "'")|raw : 'inherit' }}">
+	<div id="main" class="container" style="font-size: {{ config.font_size ? config.font_size : 'inherit' }}; font-family: {{ config.font_family ? ("'" ~ config.font_family ~ "'")|raw : 'inherit' }}">
 
 		<div id="menu_wrapper" class="">
 			<div id="menu" class="navbar-default">
