--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -25,6 +25,11 @@
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.11.0/build/css/alertify.min.css">
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.11.0/build/css/themes/default.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Fugaz+One|Open+Sans&display=swap" rel="stylesheet">
+	<style>
+		#content_wrapper pre code {
+			white-space: {{ config.break_code_blocks ? 'pre-wrap' : 'nowrap' }};
+		}
+	</style>
 </head>
 
 <body>
