#85 Fix nowrap/prewrap for code blocks

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -27,7 +27,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Fugaz+One|Open+Sans&display=swap" rel="stylesheet">
 	<style>
 		#content_wrapper pre code {
-			white-space: {{ config.break_code_blocks ? 'pre-wrap' : 'nowrap' }};
+			white-space: {{ config.break_code_blocks ? 'pre-wrap' : 'pre' }};
 		}
 	</style>
 </head>
