Added print support for wiki pages via print.css

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -8,6 +8,7 @@
 	<title>{{ config.title }}</title>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="css/base.css">
+	<link rel="stylesheet" type="text/css" href="css/print.css" media="print">
 	<link rel="stylesheet" type="text/css" href="layouts/{{ config.layout | lower }}.css">
 	<link rel="stylesheet" type="text/css" href="color-schemes/{{ config.color_scheme | lower }}.css">
 
