--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -32,6 +32,7 @@
 		}
 	</style>
 
+	<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async=""></script>
 	<script>
 		MathJax = {
 			tex: {
