* Rename LaTex to MathJax * Add option to enable MathJax

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -37,7 +37,7 @@
 		MathJax = {
 			tex: {
 				inlineMath: [['$', '$']],
-				macros: {{ config.latex_macros|raw }}
+				macros: {{ config.mathjax_macros|raw }}
 			}
 		};
 	</script>
