--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -34,12 +34,7 @@
 
 	<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async=""></script>
 	<script>
-		MathJax = {
-			tex: {
-				inlineMath: [['$', '$']],
-				macros: {{ config.mathjax_macros|raw }}
-			}
-		};
+		MathJax = {{ config.mathjax_configuration|raw }};
 	</script>
 </head>
 
