--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -70,15 +70,24 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.8.2/marked.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async=""></script>
+
+	{% if config.enable_mathjax %}
+		<!-- MathJax enabled. -->
+		<script>
+			{{ config.mathjax_configuration | raw }};
+		</script>
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+	{% endif %}
+
 	<script src="js/PineDocs.js?{{ version }}"></script>
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/{{ config.highlight_theme }}.min.css">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
+
 	<script>
-		var config = {{ config | json_encode() | raw }}
-		var errors = {{ errors | json_encode() | raw }}
-		MathJax = {{ config.mathjax_configuration | raw }};
+		var config = {{ config | json_encode() | raw }};
+		var errors = {{ errors | json_encode() | raw }};
 	</script>
+
 </body>
 
 </html>
