--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/print.css?{{ version }}" media="print">
 	<link rel="stylesheet" type="text/css" href="layouts/{{ config.layout | lower }}.css?{{ version }}">
 	<link rel="stylesheet" type="text/css" href="color-schemes/{{ config.color_scheme | lower }}.css?{{ version }}">
+	<link rel="stylesheet" type="text/css" href="css/custom.css">
 
 	<link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
@@ -80,6 +81,7 @@
 	{% endif %}
 
 	<script src="js/PineDocs.js?{{ version }}"></script>
+	<script src="js/custom.js"></script>
 	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/{{ config.highlight_theme }}.min.css">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
 
