style: newlines, uppercases and variables

--- a/public/color-schemes/simplistic-dark.css
+++ b/public/color-schemes/simplistic-dark.css
@@ -50,7 +50,7 @@ body {
 
 
 
-/* MENU ICONS */
+/*** MENU ICONS ***/
 #menu i.fa {
 	color: #999;
 }
@@ -91,6 +91,7 @@ blockquote {
 	border-color: #f83;
 	color: #999;
 }
+
 
 
 /*** SEARCH ***/
