--- a/public/color-schemes/simplistic.css
+++ b/public/color-schemes/simplistic.css
@@ -52,7 +52,7 @@ body {
 
 
 
-/* MENU ICONS */
+/*** MENU ICONS ***/
 #menu i.fa {
 	color: rgba(0, 0, 0, 0.2);
 }
@@ -89,6 +89,7 @@ blockquote {
 	border-color: #ddd;
 	color: #999;
 }
+
 
 
 /*** SEARCH ***/
